SERVER-14966 check array size for geoHaystack indexes